fix: prevent text splitting into two lines on hover by applying nowrap

--- a/client/src/sass/components/summary/_urgencyInfoCard.scss
+++ b/client/src/sass/components/summary/_urgencyInfoCard.scss
@@ -27,6 +27,7 @@
     gap: 1.3rem;
 
     &-date {
+      text-wrap: nowrap;
       color: $secondary-color-light;
       font-size: 3.3rem;
       font-weight: 700;
